# cw20-adapter

./: Cargo.toml
.github/workflows/: integration_tests.yaml  rust.yaml  unit_tests.yml
contracts/cw20-adapter/: Cargo.toml
contracts/cw20-adapter/src/: contract.rs  execute_receive.rs  execute_redeem.rs  lib.rs
contracts/cw20-adapter/src/testing/: instantiation.rs  mod.rs  query.rs  receive.rs  redeem.rs  register.rs  utils.rs
