[workspace]
members  = [ "contracts/*", "packages/*" ]
resolver = "2"

[workspace.package]
authors       = [ "Injective Labs <contact@injectivelabs.org>" ]
documentation = "https://github.com/InjectiveLabs/cw20-adapter#readme"
edition       = "2021"
homepage      = "https://injectivelabs.org"
keywords      = [ "blockchain", "cosmos", "cosmwasm", "injective" ]
license       = "AGPL-v3-or-later"
repository    = "https://github.com/InjectiveLabs/cw20-adapter"
rust-version  = "1.78.0"
version       = "2.0.0"

[workspace.dependencies]
anyhow              = { version = "1.0.86" }
cosmwasm-schema     = { version = "2.1.1" }
cosmwasm-std        = { version = "2.1.0", features = [ "abort", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "cosmwasm_2_0", "iterator", "stargate" ] }
cw-item-set         = { version = "2.0.0" }
cw-storage-plus     = { version = "2.0.0" }
cw2                 = { version = "2.0.0" }
cw20                = { version = "2.0.0" }
cw20-base           = { version = "2.0.0" }
enumset             = { version = "1.1.5", features = [ "serde" ] }
injective-cosmwasm  = { version = "0.3.0" }
injective-math      = { version = "0.3.0" }
injective-std       = { version = "1.13.0" }
injective-test-tube = { version = "1.13.2" }
injective-testing   = { version = "1.1.2" }
prost               = { version = "0.12.6" }
rand                = { version = "0.4.6" }
regex               = { version = "1.7.0" }
schemars            = { version = "0.8.16", features = [ "enumset" ] }
secp256k1           = { version = "0.6.2" }
serde               = { version = "1.0.193", default-features = false, features = [ "derive" ] }
serde-cw-value      = { version = "0.7.0" }
serde-json-wasm     = { version = "1.0.1" }
serde_json          = { version = "1.0.120" }
thiserror           = { version = "1.0.52" }
tiny-keccak         = { version = "1.2.1" }

# packages
testenv = { version = "0.1.0", path = "./packages/testenv" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false


