[package]
authors       = { workspace = true }
description   = "Description of the contract"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
name          = "cw20-adapter"
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
library = [  ]

[dependencies]
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-item-set        = { workspace = true }
cw-storage-plus    = { workspace = true }
cw2                = { workspace = true }
cw20               = { workspace = true }
cw20-base          = { workspace = true }
injective-cosmwasm = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
injective-std       = { workspace = true }
injective-test-tube = { workspace = true }
injective-testing   = { workspace = true }
testenv             = { workspace = true }
